@@ -1,0 +1,8 @@
+dist
+.installed.cfg
+bin
+develop-eggs
+include
+lib
+parts
+var
