@@ -7,6 +7,7 @@
   <include file="profiles.zcml" />
 
   <include package=".browser" />
+  <include package=".data" />
   <include package=".content" />
   <include package=".upgrades" />
 
